# NewsAPI-CLI-with-RUST

./: .env  Cargo.toml
newsApi/: Cargo.toml
newsApi/src/: lib.rs
src/: main.rs  theme.rs
