[package]
name = "cli_rust"
version = "0.1.0"
edition = "2021"
description="A simple cli news fecth api"
license="GhosTCorp"
authors=["GhosT"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20.0"
termimad = "0.14.2"
dotenv= "0.15.0"
newsApi = {path="./newsApi",features = ["async"]}
tokio = {version = "1.11.0",features = ["full"]}