[package]
name = "newsApi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.127",features = ['derive']}
serde_json = "1.0"
ureq = {version = "2.1.1",features = ["json"]}
thiserror = "1.0.31"
url = "2.2.2"
reqwest = {version = "0.11.11",features = ["json"],optional = true}

[features]
async = [
    "reqwest"
]